# AI-Project-Assistant-Studio

./: .editorconfig  .gitignore  Makefile  README.md  aipa-studio-phase1-plan.md  build.gradle.kts  install_deps.ps1  package-lock.json  package.json  pyproject.toml  settings.gradle.kts  setup_and_start.py  start_ai_engine.py  test_knowledge_ingest.py
.ai-project/: README.md  python-control-plane.db
agent/: build.gradle.kts
aipa_ai_engine/: __init__.py  debug_knowledge.py  logging_config.py  main.py  project_context.py  project_context_middleware.py
apps/api/: __main__.py  (+6 more)
cli/: .env.local  package.json
docs/: ARCHITECTURE-LOCK.md  README.md  class-diagrams.md  deployment-diagram.md  domain-model.md  installation-guide.md  module-design.md  multi-project-architecture.md  phase-gate-tracker.md  phase9-complete-summary.md  phase9-hardening.md  phase9-slice2-logging.md  phase9-slice3-rbac.md  prd.md  repository-structure.md  roadmap.md  sad.md  sequence-diagrams.md  technology-selection.md  user-guide.md  vision.md
installer/: README.md
runtime/: build.gradle.kts  test_output.txt
scanner/: build.gradle.kts
scripts/: README.md  check-doc-headings.mjs  knowledge_graph_demo.py  start-all.ps1  stop-all.ps1
specs/: test_experience_engine.py  test_knowledge_graph_api.py  test_knowledge_graph_demo_cli.py  test_knowledge_graph_edges.py  test_phase9_logging.py  test_python_control_plane_gateway_routes.py  test_python_control_plane_skeleton.py  test_scanner_priority.py  test_wisdom_engine.py
web/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
(+208 files in other folders)
