[tool.poetry]
name = "aipa-studio-ai-engine"
version = "1.0.0"
description = "AIPA Studio AI Engine — Knowledge, Memory, Learning, Experience, Wisdom"
authors = ["AIPA Studio Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
chromadb = "^0.5.0"
sentence-transformers = "^3.0.0"
langchain = "^0.2.0"
langchain-community = "^0.2.0"
llama-index = "^0.10.0"
gitpython = "^3.1.43"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "knowledge/tests",
    "memory/tests",
    "learning/tests",
    "experience/tests",
    "wisdom/tests"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
